cfg: add xml workflow and fix typo

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,6 @@ setenv =
 deps =  -rtest_requirements.txt
         -rrequirements.txt
 commands = pytest --cov=uri_handler \
-                  --cov-report=html \
+                  --cov-report=xml \
                   --junitxml=test-reports/test.xml \
                   {posargs}
-
