cfg: remove cov filter

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ setenv =
     PYTHONDONTWRITEBYTECODE=1
 deps =  -rtest_requirements.txt
         -rrequirements.txt
-commands = pytest --cov=uri_handler \
+commands = pytest --cov \
                   --cov-report=xml \
                   --junitxml=test-reports/test.xml \
                   {posargs}
